--- a/K-Life insurance/css/style.css
+++ b/K-Life insurance/css/style.css
@@ -469,6 +469,9 @@ section h2::before {
 #section01 .col {
   width: 25%;
 }
+#section01 .col3 > .col {
+  float: right;
+}
 #section01 .col2 > .col > a,
 .col2 > .col.on > div {
   text-align: left;
@@ -536,13 +539,13 @@ section h2::before {
   border-radius: 50%;
   background-color: #edf1f5;
 }
-#section01 .col4 > .col:nth-child(2) i {
+#section01 .col3 > .col:nth-child(1) i {
   background-image: url("../images/icon_s0101.png");
 }
-#section01 .col4 > .col:nth-child(3) i {
+#section01 .col3 > .col:nth-child(2) i {
   background-image: url("../images/icon_s0102.png");
 }
-#section01 .col4 > .col:nth-child(4) i {
+#section01 .col3 > .col:nth-child(3) i {
   background-image: url("../images/icon_s0103.png");
 }
 
@@ -817,7 +820,6 @@ span.more-btn::after {
 /* section02- slider */
 .slide-img-wrap {
   display: flex;
-  background-color: mediumaquamarine;
   height: 298px;
 }
 .slide {
@@ -833,8 +835,8 @@ span.more-btn::after {
 .slide a {
   position: relative;
   height: 100%;
+  width: 100%;
   display: block;
-  outline: 3px solid red;
   background: no-repeat center;
 }
 .slide:nth-child(1) a {
@@ -1133,9 +1135,15 @@ span.more-btn::after {
   background-repeat: repeat;
   background-size: unset;
 }
+#section05 .col5 {
+  box-sizing: border-box;
+  font-size: 0;
+}
 #section05 .col5 > .col {
   padding: 2% 2% 2%;
   width: 20%;
+  float: none;
+  display: inline-block;
 }
 #section05 .col5 > .col > a {
   padding: 0;
