--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
+
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -19,23 +21,24 @@ time, mark, audio, video {
 }
 
 body {
-  font: normal 16px 'Nanum Gothic', AppleGothic, "돋움", dotum, Arial, Verdana, sans-serif;
-	font-family: 'Noto Sans KR', sans-serif;
-	font-weight: 100;
-	line-height:1.7;
-	box-sizing: border-box;
-  letter-spacing: normal;
-  width: 100%;
-  height: 100vh;
-  padding:25px 40px;
-  max-width: 1471px;
-  margin:0 auto;
+    font-style: normal;
+    font-size: 1em;
+    font-family:'Noto Sans KR','Lalezar', cursive,  sans-serif,'Nanum Gothic', AppleGothic, "돋움", dotum, Arial, ;
+    font-weight: 100;
+    line-height:1.7;
+    box-sizing: border-box;
+    letter-spacing: normal;
+    width: 100%;
+    height: 100vh;
+    padding:25px 40px;
+    max-width: 1471px;
+    margin:0 auto;
 }
 
-article,aside,details,figcaption,figure,
+/* article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
     display:block;
-}
+} */
 
 nav ul {
     list-style:none;
@@ -78,3 +81,13 @@ input, select {
     vertical-align:middle;
 }
 ul, ol {list-style:none;}
+
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+textarea:focus,button:focus ,input:focus {
+  outline: none;
+}
