--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
 
+* { box-sizing: border-box; }
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
@@ -90,4 +91,21 @@ button {
 
 textarea:focus,button:focus ,input:focus {
   outline: none;
+}
+
+/* scroll */
+*::-webkit-scrollbar {
+	width:10px;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+	border-radius: 9px;
+	width: auto;
+  background-color: #0f344b93;
+}
+*::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
 }
