--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,7 @@ ul {height: inherit; width: inherit;}
   overflow: hidden;
   display: none;
   box-sizing: border-box;
+    overflow-y: scroll;
 }
 /* js s-on붙을때 보여진다. */
 .sections-container section.s-on {
@@ -172,8 +173,8 @@ ul {height: inherit; width: inherit;}
 .s-contact > h1 {
   text-align: center;
   width: fit-content;
-  font-size: 10em;
-  line-height: 1.7em;
+  font-size: 12em;
+  line-height: 1.4em;
   color: rgba(31, 28, 77, 0.041);
 }
 .profile {
@@ -181,21 +182,21 @@ height: 50%;
 width: 100%;
 }
 .p-image {
+  background-image: url('../images/profileImg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   position: absolute;
   width: 240px;
   height: 240px;
   background-color: rgba(255, 255, 255, 0.678);
   border-radius: 50%;
-  left: 17%;top: 50%;
+  left: 20%;top: 50%;
   transform: translateY(-50%);
   overflow: hidden;
-  background-image: url('../images/profileImg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 address { 
   position: absolute;
-  right: 20px; top: 50%;
+  right: 0; top: 50%;
   transform: translateY(-50%);
   width: 50%;
   display: grid;
@@ -209,7 +210,10 @@ address > a {
   font-weight: bold;
   width: fit-content;
   color: #0f344b;
+  padding: 7px 0;
+  line-height: 100%;
 }
+address > a > i {margin-right:9px ;}
 address > a:nth-child(1):hover{
   color:#4c00b8 ;
 }
@@ -222,36 +226,43 @@ address > a:nth-child(3):hover{
 
 /* portfolio */
 .sections-container .s-portfolio > ul {
-  height: 400vh;
-  grid-template-rows: repeat(4,100vh);
-  overflow-y: scroll;
+  height: 300vh;
+  grid-template-rows: repeat(4,1fr);
 }
-.sections-container section ul {
+.sections-container section > ul {
   display: grid;
-
-
-  padding-bottom:25px;
-
 }
-section ul > li {
+
+section > ul > li {
   background-color: lightskyblue;
   outline: 1px solid gold;
   position: relative;
-  border: 1px solid goldenrod;
-  padding: 25px 0;
 }
-a.result-img,
+section > ul > li a,
 .detail{
-    left: 50%; 
+  left: 50%; 
   transform: translateX(-50%);
 }
 
- a.result-img {
+ section ul > li > a {
   position: absolute;
   top: 53px;
   background-color: rgb(116, 129, 0);
-  width: 55%;
-  height: 300px
+  width: 60%;
+  height: 380px;
+  overflow: hidden;
+}
+
+.result-images {
+  background-color: lightcoral;
+  width: 300%;
+  display: flex;
+}
+.result-images > li {
+  outline: 1px solid black;
+
+  width: 100%;
+  height: 100%;
 }
 .detail {
   position: absolute;
