--- a/mini works/javascript/paint-JS/reset.css
+++ b/mini works/javascript/paint-JS/reset.css
@@ -18,13 +18,20 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
 	line-height: 1;
+	background-color: #f6f9fc;
+	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
 }
 ol, ul {
 	list-style: none;
