--- a/mini works/javascript/paint-JS/style.css
+++ b/mini works/javascript/paint-JS/style.css
@@ -1,37 +1,47 @@
 @import "reset.css";
 
-body {
-    background-color: #f6f9fc;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 50px;
-    padding: 50px 0;
+.canvas-wrap {
+    position: relative;
+    width: 100%;   height: 100%;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 15%;
+    max-width: 1336px;
+    min-width: 1157px;
 }
-
+.canvas-wrap > * {
+    box-sizing: border-box;
+    position: relative;
+}
+.center {
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+}
 .canvas {
-    /* width: 700px;
-    height:  500px; */
+    /* width: 100%; height: 80%; */
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba( 0, 0, 0, 0.08);
 }
 .controls {
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 80%;
+}
+.controls > * {
+    position: absolute;     
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-/*  */
+/* controls__range */
 .controls .controls__range {
-    margin-bottom: 30px;
+    bottom: 70px;
+    width: 80%;
 }
-
-/*  */
+.controls .controls__range input {width: 100%;}
+/* controls__btns */
 .controls .controls__btns {
-    margin-bottom: 30px;
+    bottom: 10px;
+    width: fit-content;
 }
 .controls__btns button {
     all: unset;
@@ -51,17 +61,17 @@ body {
     transform: scale(0.98);
 }
 
-/*  */
-.controls .controls__colors {
-    display: flex;
+/* controls__colors */
+.controls .controls__colors_wrap {
+
 }
 .controls__colors .controls__color {
-    width: 50px;
-    height: 50px;
+    width: 65px;
+    height: 65px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba( 0, 0, 0, 0.08);
     border-radius: 50%;
     cursor: pointer;
 }
 .controls__colors > div + div {
-    margin-left: 3px;
+    margin-top: 5px;
 }
