--- a/mini works/javascript/google-page/index.css
+++ b/mini works/javascript/google-page/index.css
@@ -33,6 +33,9 @@ button::after{
 button:hover::after {
   background-color:#66191980 ;
 }
+button:focus{
+  outline: none;
+}
 .form,
 .greetings {
   display: none;
